Use G1 GC